# kernel3d

./: Readme.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ashmem.h  kernel3d.cpp
app/src/main/cpp/controllers/: controllers_binding.cpp  controllers_binding.h  handtracking_inputs.cpp  handtracking_inputs.h
app/src/main/cpp/engine/: Engine.cpp  Engine.h  GraphicsBackendManager.cpp  GraphicsBackendManager.h  OpenXRPlugin.cpp  OpenXRPlugin.h  SpatialObject.cpp  SpatialObject.h  XrAppLayer.cpp  XrAppLayer.h  gfxwrapper_opengl.c  gfxwrapper_opengl.h
app/src/main/cpp/mirage_app/: mirage_app_server.cpp  mirage_app_server.h  mirage_loader.cpp  mirage_loader.h  mirage_main.cpp  mirage_main.h  mirage_service.cpp  mirage_service.h  mirage_utils.cpp  mirage_utils.h  platformplugin.cpp  platformplugin.h
app/src/main/cpp/mirage_shared/: XrActionDescriptor.cpp  XrActionDescriptor.h  XrActionSetDescriptor.cpp  XrActionSetDescriptor.h  XrActionSpaceDescriptor.cpp  XrActionSpaceDescriptor.h  XrInstanceDescriptor.cpp  XrInstanceDescriptor.h  XrPathDescriptor.cpp  XrPathDescriptor.h  XrReferenceSpaceDescriptor.cpp  XrReferenceSpaceDescriptor.h  XrSessionDescriptor.cpp  XrSessionDescriptor.h  XrSwapchainDescriptor.cpp  XrSwapchainDescriptor.h  XrSystemIdDescriptor.cpp  XrSystemIdDescriptor.h  common_types.h  shared_memory_descriptor.cpp  shared_memory_descriptor.h
app/src/main/cpp/openxr/: loader_interfaces.h  openxr_platform.h
app/src/main/cpp/oxr_runtime/: android_globals.cpp  android_globals.h  mirage_binder.cpp  mirage_binder.h  oxr_api_action.cpp  oxr_api_debug.cpp  oxr_api_funcs.h  oxr_api_instance.cpp  oxr_api_negotiate.cpp  oxr_api_session.cpp  oxr_api_space.cpp  oxr_api_swapchain.cpp  oxr_api_system.cpp  oxr_api_verify.cpp  oxr_api_verify.h  oxr_chain.h  oxr_extension_support.h  oxr_objects.h  oxr_path.cpp
app/src/main/java/com/androx/kernel3d/: Kernel3DLauncher.java  MirageService.java  PicoreurService.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
